--- a/style-mobile.css
+++ b/style-mobile.css
@@ -1,1 +1,18 @@
-@media screen and (max-width: 768px){}
+@media screen and (max-width: 768px){
+    #send{
+        display: block;
+        margin-left: 10vw;
+        margin-top: 2vh;
+    }
+    .wrapperFortextbox{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .wrapper{
+        padding-top: 5px;
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+    }
+
+}
